# MusicTower

./: .env  .gitignore  Cargo.toml  README.md  build-release.sh  run.sh
.github/workflows/: build.yml  tauri-release.yml
VSA_tools/: VSA_loader_tool.mjs  index.html
build_config/: configure_fedora.sh  configure_macintosh.sh  configure_silverblue.sh  configure_ubuntu.sh  configure_windows.cmd
config/: scanner_conf.yaml
src/: ImgCoalesce.js  VSA_shadercore.js  colors.js  config.rs  database.rs  eq.js  index.html  loading.html  logos.rs  main.rs  mixer.css  mixer.js  popup.html  scanner.rs  server.rs  setup.rs  shader-api.md  shader_catalog.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  main.rs  server.rs  setup.rs
