[package]
name = "starkeeper-music"
version = "0.1.0"
edition = "2021"

[features]
default = ["details-updater", "logo-cache"]
details-updater = []
logo-cache = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

rusqlite = { version = "0.35", features = ["bundled"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
ureq = { version = "2", features = ["json"] }
keyvalues-parser = "0.2"
rayon = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
steam-vent = "0.5.0"
steam-vent-proto-steam = "0.5.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
